@@ -1,3 +1,8 @@
+2015-11-26  Ilya Enkovich  <enkovich.gnu@gmail.com>
+
+	PR target/68416
+	* gcc.target/i386/mpx/pr68416.c: New test.
+
 2015-11-26  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/67313
